solve an alignment issue between big numbers and  icons in counters

--- a/src/components/home/ByEntriesFeatured/styles.css
+++ b/src/components/home/ByEntriesFeatured/styles.css
@@ -17,6 +17,9 @@
 .card-flex-container:hover {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
+.card-header > a {
+  display: flex;
+}
 
 .card-header h6 {
   font-weight: 600;
@@ -52,6 +55,7 @@
   color: #333;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .no-link {
   display: flex;
@@ -65,7 +69,6 @@
   height: 3em;
   width: 38px;
   background-image: url('../../../images/icons/ico-ida.svg');
-  background-size: 100%;
   background-position-y: 59%;
   background-repeat: no-repeat;
 }
@@ -83,7 +86,6 @@
   height: 3em; /*to align icon*/
   width: 30px;
   background-image: url('../../../images/icons/ico-species.svg');
-  background-size: 100%;
   background-position-y: 59%;
   background-repeat: no-repeat;
 }
